# sonica

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  sonica.toml.example
assets/: .gitignore
shaders/: common.wgsl
src/: cli.rs  config.rs  main.rs
src/audio/: analysis.rs  decode.rs  features.rs  mod.rs
src/encode/: ffmpeg.rs
src/render/: frame.rs  gpu.rs  mod.rs  pipeline.rs  postprocess.rs  text.rs
src/subtitle/: cue.rs  mod.rs  model.rs  render.rs  srt.rs  transcribe.rs
src/templates/: embedded.rs  loader.rs  manifest.rs  mod.rs
templates/circular_spectrum/: main.wgsl  manifest.json
templates/frequency_bars/: main.wgsl  manifest.json
templates/kaleidoscope/: main.wgsl  manifest.json
templates/particle_burst/: main.wgsl  manifest.json
templates/spectrogram/: main.wgsl  manifest.json
templates/waveform_scope/: main.wgsl  manifest.json
