[package]
name = "sonica"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "pcm"] }
rustfft = "6"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
indicatif = "0.17"
anyhow = "1"
thiserror = "2"
rayon = "1"
fontdue = "0.9"
zip = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
