[package]
name = "sonica"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
symphonia = { version = "0.6", features = ["mp3", "flac", "ogg", "aac", "wav", "pcm"] }
rustfft = "6"
wgpu = "30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
indicatif = "0.18"
anyhow = "1"
thiserror = "2"
rayon = "1"
fontdue = "0.9"
fontdb = "0.23"
unicode-segmentation = "1"
zip = "8"
dirs = "6.0.0"
rubato = { version = "4", optional = true }
hf-hub = { version = "1", optional = true, features = ["blocking", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", optional = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16", optional = true }

[features]
default = []
subtitles = ["dep:whisper-rs", "rubato", "hf-hub"]

[profile.release]
opt-level = 3
lto = "thin"
